2006-03-12  David Hampton  <hampton@employees.org>

	* src/gnome-utils/glade/commodity.glade: Tweak a couple of
	tooltips. Try and make it clear that the commodity mnemonic field
	must exactly match that used by the quote source.

	* src/report/standard-reports/advanced-portfolio.scm: Andrew
	Sackville-West's patch to tidy up the multi-currency handling
	quite a bit. It also adds some functionality such as showing the
	basis, realized and unrealized gains, and takes advantage of the
	new gnc_pricedb_lookup-latest-before function.

	* src/business/business-reports/aging.scm: Andrew Sackville-West's
	patch to show zero balance entries in the payables and receivables
	aging reports.

	* src/engine/gnc-pricedb.[ch]:
	* src/engine/gw-engine-spec.scm: Andrew Sackville-West's changes
	to add the ability to lookup the latest price before a specific
	date.

	* src/register/register-gnome/gnucash-sheet.[ch]:
	* src/register/ledger-core/split-register.[ch]:
	* src/register/ledger-core/split-register-control.c:
	* src/gnome/gnc-split-reg.[ch]:
	* src/gnome/gnc-plugin-page-register.c:
	* src/engine/Transaction.h: Replace the changes in r13361 with a
	better method for determining when a change in the register needs
	to be reflected in the available user actions.  Now updates the
	Void and Unvoid actions which implements the enhancement request
	in 330763.

2006-03-11  David Hampton  <hampton@employees.org>

	* src/register/register-gnome/combocell-gnome.c:
	* src/register/register-gnome/gnucash-item-list.[ch]: Finish
	removing the redundant list of valid strings maintained by the
	combocell and use the list in the item_edit widget.  Fixes the
	problem where account cell contents disappear when focusing in/out
	of an account cell.

	* src/gnome-utils/account-quickfill.c: Update the quickfill to
	watch for accounts being added/removed from the account
	tree. Fixes 152101 and 302682.

2006-03-11  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-search/dialog-search.c: